<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Destination Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="main_add_btn">Add Alarm</string>
    <string name="main_edit_btn">Edit Alarm</string>
    <string name="main_del_btn">Delete Alarm</string>
    <string name="title_activity_add_alarm">AddAlarmActivity</string>
    <string name="add_cancel_btn">Cancel</string>
    <string name="add_done_btn">Done</string>
    <string name="add_label_text_hint">Label</string>
    <string name="title_activity_edit_alarm">EditAlarmActivity</string>
    <string name="edit_cancel_btn">Cancel</string>
    <string name="edit_done_btn">Done</string>
    <string name="edit_label_text_hint">Label</string>
    <string name="title_activity_message_dialog">MessageDialog</string>
    <string name="msg_cfm_btn">Confirm</string>
	<string name="main_not_select_msg">Please Select an Item!</string>
	<string name="add_map_text_hint">Destination</string>
	<string name="add_not_input_address">Please input the address of the destination!</string>
</resources>