<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"    
    android:stretchColumns="0,1,2" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/mainAddBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_add_btn" >
        </Button>

        <Button
            android:id="@+id/mainEditBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_edit_btn" >
        </Button>

        <Button
            android:id="@+id/mainDelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_del_btn" >
        </Button>
    </TableRow>

    <ListView
        android:id="@+id/mainListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</TableLayout>